--- a/res/layout/command_list.xml
+++ b/res/layout/command_list.xml
@@ -3,6 +3,12 @@
 android:orientation="vertical"
 android:layout_width="fill_parent" 
 android:layout_height="fill_parent">
+	<EditText
+	    android:id="@+id/id_search_field"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:hint="@string/search_hint"
+	    android:inputType="text" />
 	<ListView android:id="@+id/id_command_list_view"
     	android:layout_width="fill_parent" 
     	android:layout_height="fill_parent" />
