added preferences to switch between common/linux/macos...

--- a/res/menu/command_list_actions.xml
+++ b/res/menu/command_list_actions.xml
@@ -2,5 +2,6 @@
     xmlns:tldrapp="http://schemas.android.com/apk/res-auto" >
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
+          android:icon="@drawable/ic_action_settings"
           tldrapp:showAsAction="ifRoom" />
 </menu>
