--- a/app/src/main/res/layout/activity_command_content.xml
+++ b/app/src/main/res/layout/activity_command_content.xml
@@ -9,6 +9,7 @@
 		android:id="@+id/detail_content"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+        android:layout_margin="@dimen/tldr_margin"
 		android:text="@string/placeholder_content" />
 	
 </LinearLayout>
