--- a/app/src/main/res/layout/command_list_item.xml
+++ b/app/src/main/res/layout/command_list_item.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:padding="10dp"
-	android:textSize="16sp" >
-</TextView>
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/command_item"
+        android:padding="10dp"
+        android:textSize="16sp"
+        android:layout_alignParentLeft="true">
+    </TextView>
+    <TextView
+        android:layout_width="75dp"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:id="@+id/command_platform"
+        android:text="Test"
+        android:textSize="12dp"/>
+</RelativeLayout>
